--- a/src/es/gmarco/massdown/superclases/Main.form
+++ b/src/es/gmarco/massdown/superclases/Main.form
@@ -15,7 +15,7 @@
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
-    <Property name="title" type="java.lang.String" value="MassDown por @gmarco_"/>
+    <Property name="title" type="java.lang.String" value="MassDown"/>
     <Property name="iconImage" type="java.awt.Image" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
       <Connection code="new ImageIcon(getClass().getResource(&quot;/es/gmarco/massdown/recursos/icon.png&quot;)).getImage()" type="code"/>
     </Property>
